--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
           <p class="ghf-features is-no-padding is--black">
             TechX.AI gets you to code from day 1. You set up your coding
             environment and begin coding right away. You learn LIVE from expert
-            instructors, who get you performing quickly. Lab session get you
+            instructors, who get you performing quickly. Lab sessions get you
             extra practice to sharpen your newly acquired skills.<br /><br />You
             learn fast. If you need to repeat something or an entire course, you
             can just join in again with the next batch.
@@ -709,11 +709,11 @@
           >
             <div id="w-node-_48011937-9b69-3063-2ed2-a7dfb76c5ce7-01dd2bd1">
               <p class="paragraph-75">
-                At TechX.AI you star via a modest
-                <strong>monthly or annual subscription</strong>. You can also
-                opt for the ala carte pricing model for each program. You can
-                repeat LIVE core courses and labs as often as you need - to
-                perfect your skills. After you start a job, you continuously
+                At TechX.AI you start via a modest
+                <strong>half-yearly or annual subscription.</strong> You can
+                also opt for the ala carte pricing model for each program. You
+                can repeat LIVE core courses and labs as often as you need - to
+                perfect your skills. After you start a job, you can continuously
                 upskill to advance your career. With affordable subscription
                 plans, TechX.AI will support you throughout your career.
               </p>
