--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             >
               <iframe
                 class="embedly-embed"
-                src="//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fplayer.vimeo.com%2Fvideo%2F724765662%3Fh%3D64d8a9787c%26app_id%3D122963&dntp=1&display_name=Vimeo&url=https%3A%2F%2Fvimeo.com%2F724765662&image=https%3A%2F%2Fi.vimeocdn.com%2Fvideo%2F1459261271-134cff061b888cddc998ae7c1fe3055bbbf62c42ddd88878611dc8c4ab4d0ac1-d_1280&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=vimeo"
+                src="https://player.vimeo.com/video/725599646?app_id=122963&h=b8386267a8&referrer=https%3A%2F%2Funiv-ai-7dceb7.webflow.io%2F"
                 scrolling="no"
                 allowfullscreen
                 title="TechX FAQ-1"
