--- a/index.html
+++ b/index.html
@@ -392,7 +392,9 @@
         </style>
       </div>
       <div class="div-block-146">
-        <a href="http://my.univ.ai" class="navlink _3-copy w-nav-link"
+        <a
+          href="https://application.univ.ai/login?from=https://my.univ.ai/techx"
+          class="navlink _3-copy w-nav-link"
           >Register now</a
         >
       </div>
@@ -481,7 +483,7 @@
             <div class="div-block-187">
               <a
                 id="w-node-_10af3c9b-86ed-accf-9730-9f4a284cdfba-01dd2bd1"
-                href="http://my.univ.ai"
+                href="https://application.univ.ai/login?from=https://my.univ.ai/techx"
                 target="_blank"
                 class="button-black-5 w-button"
                 >Register now</a
@@ -514,7 +516,7 @@
               <div class="div-block-186-copy">
                 <div class="div-block-187">
                   <a
-                    href="http://my.univ.ai"
+                    href="https://application.univ.ai/login?from=https://my.univ.ai/techx"
                     target="_blank"
                     id="w-node-b37e92e9-a14f-ee62-e497-6e296862c5ae-01dd2bd1"
                     class="button-black-5 w-button"
@@ -539,7 +541,7 @@
                 <div class="div-block-187">
                   <a
                     id="w-node-b37e92e9-a14f-ee62-e497-6e296862c5c0-01dd2bd1"
-                    href="http://my.univ.ai"
+                    href="https://application.univ.ai/login?from=https://my.univ.ai/techx"
                     target="_blank"
                     class="button-black-5 w-button"
                     >Register now</a
@@ -592,7 +594,7 @@
                 <div class="div-block-187">
                   <a
                     id="w-node-_9ea38d18-7141-3244-f1c8-dc41c16c634c-c16c634c"
-                    href="http://my.univ.ai"
+                    href="https://application.univ.ai/login?from=https://my.univ.ai/techx"
                     target="_blank"
                     class="button-black w-button"
                     >Register here</a
@@ -646,7 +648,7 @@
           <div class="div-block-185 variant">
             <div>
               <a
-                href="http://my.univ.ai"
+                href="https://application.univ.ai/login?from=https://my.univ.ai/techx"
                 target="_blank"
                 id="w-node-_80be7f5d-8620-c85f-10dc-4bd1fb25f6d5-01dd2bd1"
                 class="button-black-5 w-button"
@@ -721,7 +723,7 @@
                 <div class="div-block-187">
                   <a
                     id="w-node-_9ea38d18-7141-3244-f1c8-dc41c16c634c-c16c634c"
-                    href="http://my.univ.ai"
+                    href="https://application.univ.ai/login?from=https://my.univ.ai/techx"
                     target="_blank"
                     class="button-black w-button"
                     >Register now</a
