python-pre added

--- a/index.html
+++ b/index.html
@@ -505,6 +505,31 @@
               id="w-node-b37e92e9-a14f-ee62-e497-6e296862c5a0-01dd2bd1"
               class="div-block-192"
             >
+              <h5 class="award-title-2">Pre-Python</h5>
+              <div class="w-richtext">
+                <p>
+                  If you have zero programming experience then start with this
+                  course.
+                  <br /><br />5 days a week, 1 course, 2 weeks<br />Starting
+                  October 3rd, 2022
+                </p>
+              </div>
+              <div class="div-block-186-copy">
+                <div class="div-block-187">
+                  <a
+                    href="https://application.univ.ai/login?from=https://my.univ.ai/techx"
+                    target="_blank"
+                    id="w-node-b37e92e9-a14f-ee62-e497-6e296862c5ae-01dd2bd1"
+                    class="button-black-5 w-button"
+                    >Register now</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div
+              id="w-node-b37e92e9-a14f-ee62-e497-6e296862c5a0-01dd2bd1"
+              class="div-block-192"
+            >
               <h5 class="award-title-2">Python Programmer</h5>
               <div class="w-richtext">
                 <p>
