--- a/index.html
+++ b/index.html
@@ -399,15 +399,15 @@
           >
             <div
               id="w-node-_86cfa29a-e458-3da4-80f9-ff77d4b79d77-593c93e1"
-              style="padding-top: 56.17021276595745%"
+              style="padding-top: 56.27659574468085%"
               class="w-video w-embed"
             >
               <iframe
                 class="embedly-embed"
-                src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FceFP8qynEC0%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DceFP8qynEC0&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FceFP8qynEC0%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube"
+                src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fplayer.vimeo.com%2Fvideo%2F724765662%3Fh%3D64d8a9787c%26app_id%3D122963&dntp=1&display_name=Vimeo&url=https%3A%2F%2Fvimeo.com%2F724765662&image=https%3A%2F%2Fi.vimeocdn.com%2Fvideo%2F1517006700-2face68711e128e08d31411b91ac857415ef2bc1802d7db324dd8da692222ac7-d_1280&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=vimeo"
                 scrolling="no"
                 allowfullscreen=""
-                title="Hands on Learning at TechX.AI"
+                title="TechX FAQ-1"
               ></iframe>
             </div>
           </div>
@@ -440,10 +440,10 @@
           <div style="padding-top: 56.17021276595745%" class="w-video w-embed">
             <iframe
               class="embedly-embed"
-              src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FNCoDxnQ0cSg%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DNCoDxnQ0cSg&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FNCoDxnQ0cSg%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube"
+              src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FceFP8qynEC0%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DceFP8qynEC0&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FceFP8qynEC0%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube"
               scrolling="no"
               allowfullscreen=""
-              title="Get a tech job in as little as 8 weeks."
+              title="Hands on Learning at TechX.AI"
             ></iframe>
           </div>
         </div>
@@ -494,16 +494,15 @@
                 </p>
                 <p>‍</p>
                 <p>5 days a week, 1 course, 2 weeks<strong>‍</strong></p>
-                <p>Starting October 3rd, 2022</p>
               </div>
               <div class="div-block-186-copy">
                 <div class="div-block-187">
                   <a
                     id="w-node-_18dfcdeb-db81-6c24-d1e8-4e24777dad0b-593c93e1"
-                    href="http://my.univ.ai"
+                    href="https://my.univ.ai/techx/pre-python"
                     target="_blank"
                     class="button-black-5 w-button"
-                    >Register now</a
+                    >Learn more</a
                   >
                 </div>
               </div>
@@ -516,18 +515,17 @@
               <div class="w-richtext">
                 <p>
                   Become a Python Programmer in 8 weeks. No coding experience
-                  required.<br /><br />5 days a week, 4 courses, 8 weeks.<br />Starting
-                  August 1, 2022
+                  required.<br /><br />5 days a week, 4 courses, 8 weeks.<br />
                 </p>
               </div>
               <div class="div-block-186-copy">
                 <div class="div-block-187">
                   <a
-                    href="http://my.univ.ai"
+                    href="https://my.univ.ai/techx/python-programme"
                     target="_blank"
                     id="w-node-b37e92e9-a14f-ee62-e497-6e296862c5ae-593c93e1"
                     class="button-black-5 w-button"
-                    >Register now</a
+                    >Learn more</a
                   >
                 </div>
               </div>
@@ -541,17 +539,17 @@
                 <p>
                   Become a Data &amp; Statistical Analyst in 8 weeks. No coding
                   experience required.<br />‍<br />5 days a week, 8 courses, 8
-                  weeks.<br />Coming soon.
+                  weeks.<br />
                 </p>
               </div>
               <div class="div-block-186-copy">
                 <div class="div-block-187">
                   <a
                     id="w-node-b37e92e9-a14f-ee62-e497-6e296862c5c0-593c93e1"
-                    href="http://my.univ.ai"
+                    href="https://my.univ.ai/techx/data-and-statistical-analyst"
                     target="_blank"
                     class="button-black-5 w-button"
-                    >Register now</a
+                    >Learn more</a
                   >
                 </div>
               </div>
@@ -711,10 +709,10 @@
                 <div class="div-block-187">
                   <a
                     id="w-node-_9ea38d18-7141-3244-f1c8-dc41c16c634c-c16c634c"
-                    href="http://my.univ.ai"
+                    href="https://my.univ.ai/techx/career-development"
                     target="_blank"
                     class="button-black w-button"
-                    >Register here</a
+                    >Learn more</a
                   >
                 </div>
               </div>
@@ -772,18 +770,18 @@
             Get a tech job in as little as <span class="blue">8 weeks.</span>
           </h2>
           <div id="w-node-_5f27df9d-0394-224a-d9ac-b4218800a099-593c93e1">
-            <img
-              src="images/Mask-Group-1_compressed.jpg"
-              loading="lazy"
-              srcset="
-                images/Mask-Group-1_compressed-p-800.jpeg   800w,
-                images/Mask-Group-1_compressed-p-1080.jpeg 1080w,
-                images/Mask-Group-1_compressed.jpg         1200w
-              "
-              id="w-node-_5f27df9d-0394-224a-d9ac-b4218800a09a-593c93e1"
-              sizes="(max-width: 479px) 93vw, (max-width: 767px) 96vw, (max-width: 991px) 95vw, (max-width: 1279px) 42vw, (max-width: 1439px) 43vw, 44vw"
-              alt=""
-            />
+            <div
+              style="padding-top: 56.17021276595745%"
+              class="w-video w-embed"
+            >
+              <iframe
+                class="embedly-embed"
+                src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FNCoDxnQ0cSg%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DNCoDxnQ0cSg&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FNCoDxnQ0cSg%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube"
+                scrolling="no"
+                allowfullscreen=""
+                title="Get a tech job in as little as 8 weeks."
+              ></iframe>
+            </div>
           </div>
           <p id="w-node-_5f27df9d-0394-224a-d9ac-b4218800a095-593c93e1">
             TechX.AI is designed to get you started on a tech-career
@@ -825,17 +823,6 @@
                 upskill to advance your career. With affordable subscription
                 plans, TechX.AI will support you throughout your career.
               </p>
-              <div class="div-block-186">
-                <div class="div-block-187">
-                  <a
-                    id="w-node-_9ea38d18-7141-3244-f1c8-dc41c16c634c-c16c634c"
-                    href="http://my.univ.ai"
-                    target="_blank"
-                    class="button-black w-button"
-                    >Register now</a
-                  >
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -851,7 +838,7 @@
         <div class="div-block-187-copy">
           <a
             id="w-node-_9ea38d18-7141-3244-f1c8-dc41c16c634c-c16c634c"
-            href="http://my.univ.ai"
+            href="https://my.univ.ai/techx"
             target="_blank"
             class="button-black w-button"
             >Buy now</a
@@ -872,7 +859,7 @@
         <div class="div-block-187-copy">
           <a
             id="w-node-_9ea38d18-7141-3244-f1c8-dc41c16c634c-c16c634c"
-            href="http://my.univ.ai"
+            href="https://my.univ.ai/subscription"
             target="_blank"
             class="button-black w-button"
             >Buy now</a
@@ -892,7 +879,7 @@
         <div class="div-block-187-copy">
           <a
             id="w-node-_9ea38d18-7141-3244-f1c8-dc41c16c634c-c16c634c"
-            href="http://my.univ.ai"
+            href="https://my.univ.ai/subscription"
             target="_blank"
             class="button-black w-button"
             >Buy now</a
@@ -909,9 +896,7 @@
             }
           </style>
         </div>
-        <h2 class="student-stories-headline">
-          Meet the DSLP Fellowship Cohort
-        </h2>
+        <h2 class="student-stories-headline">Our students say it best</h2>
         <div class="w-embed">
           <style>
             html,
