--- a/index.html
+++ b/index.html
@@ -475,6 +475,131 @@
       </div>
     </div>
     <div class="wf-section">
+      <div class="facult-wrapper">
+        <h2 class="faculty-header is--home">Meet The Founders</h2>
+        <p class="faculty-description">
+          Our founding faculty hail from some of the world’s leading
+          institutions and research labs in AI and Data Science.
+        </p>
+        <div
+          data-delay="4000"
+          data-animation="slide"
+          class="faculty-slider w-slider"
+          data-autoplay="false"
+          data-easing="ease-in-out-quad"
+          data-hide-arrows="false"
+          data-disable-swipe="false"
+          data-autoplay-limit="0"
+          data-nav-spacing="3"
+          data-duration="500"
+          data-infinite="true"
+        >
+          <div class="faculty-mask w-slider-mask">
+            <div class="faculty-slide w-slide">
+              <a href="#" class="w-inline-block"
+                ><img
+                  src="images/Homepage_Pavlos_1.jpg"
+                  loading="lazy"
+                  srcset="
+                    images/Homepage_Pavlos_1-p-500.jpeg   500w,
+                    images/Homepage_Pavlos_1-p-800.jpeg   800w,
+                    images/Homepage_Pavlos_1-p-1080.jpeg 1080w,
+                    images/Homepage_Pavlos_1.jpg         1200w
+                  "
+                  sizes="(max-width: 767px) 87vw, 57vw"
+                  alt="Picture of Dr Pavlos Protopapas"
+                />
+                <h5 class="facult-name">Dr. Pavlos Protopapas</h5>
+                <p class="faculty-designation techx">
+                  Scientific Program Director,<br />IACS, Harvard University<br />PhD,
+                  University of Pennsylvania
+                </p>
+              </a>
+            </div>
+            <div class="faculty-slide w-slide">
+              <a href="#" class="w-inline-block"
+                ><img
+                  src="images/Homepage_Rahul_1.jpg"
+                  loading="lazy"
+                  srcset="
+                    images/Homepage_Rahul_1-p-800.jpeg   800w,
+                    images/Homepage_Rahul_1-p-1080.jpeg 1080w,
+                    images/Homepage_Rahul_1.jpg         1200w
+                  "
+                  sizes="(max-width: 767px) 87vw, 57vw"
+                  alt="Picture of Dr. Rahul Dave"
+                />
+                <h5 class="facult-name">Dr. Rahul Dave</h5>
+                <p class="faculty-designation techx">
+                  Former Lecturer, Harvard University<br />Computational
+                  Scientist &amp; Cosmologist<br />PhD, University of
+                  Pennsylvania
+                </p>
+              </a>
+            </div>
+            <div class="faculty-slide w-slide">
+              <a href="#" class="w-inline-block"
+                ><img
+                  src="images/Homepage_Achuta_1.jpg"
+                  loading="lazy"
+                  srcset="
+                    images/Homepage_Achuta_1-p-500.jpeg   500w,
+                    images/Homepage_Achuta_1-p-800.jpeg   800w,
+                    images/Homepage_Achuta_1-p-1080.jpeg 1080w,
+                    images/Homepage_Achuta_1.jpg         1200w
+                  "
+                  sizes="(max-width: 767px) 87vw, 57vw"
+                  alt="Picture of Achuta Kadambi"
+                />
+                <h5 class="facult-name">Achuta Kadambi</h5>
+                <p class="faculty-designation techx">
+                  Assistant Professor, UCLA<br />PhD, MIT<br />Forbes 30 under
+                  30
+                </p>
+              </a>
+            </div>
+            <div class="faculty-slide w-slide">
+              <a href="#" class="w-inline-block"
+                ><img
+                  src="images/Homepage_Raghu_2.jpg"
+                  loading="lazy"
+                  srcset="
+                    images/Homepage_Raghu_2-p-500.jpeg   500w,
+                    images/Homepage_Raghu_2-p-800.jpeg   800w,
+                    images/Homepage_Raghu_2-p-1080.jpeg 1080w,
+                    images/Homepage_Raghu_2.jpg         1200w
+                  "
+                  sizes="(max-width: 767px) 87vw, 57vw"
+                  alt="Picture of Raghu Meka"
+                />
+                <h5 class="facult-name">Raghu Meka</h5>
+                <p class="faculty-designation techx">
+                  Associate Professor, UCLA<br />PhD, UT Austin<br />Former
+                  Researcher, Microsoft Research
+                </p>
+              </a>
+            </div>
+          </div>
+          <div class="left-arrow-11 w-slider-arrow-left">
+            <img
+              src="images/Black-arrow-left.svg"
+              loading="lazy"
+              alt="Move left"
+              class="image-55"
+            />
+          </div>
+          <div class="right-arrow-10 icon-16 w-slider-arrow-right">
+            <img
+              src="images/Black-arrow-right.svg"
+              loading="lazy"
+              alt="Move right"
+            />
+          </div>
+          <div class="slide-nav-11 w-slider-nav w-round"></div>
+        </div>
+      </div>
+    </div>
+    <div class="wf-section">
       <div>
         <div class="three-column-grid-wrapper variant">
           <h2 class="program-track-headline">Job tracks</h2>
@@ -574,7 +699,7 @@
                     images/Afreen-Khan-p-1080.jpg 1080w,
                     images/Afreen-Khan.jpg        1332w
                   "
-                  sizes="(max-width: 479px) 93vw, (max-width: 767px) 96vw, (max-width: 991px) 46vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
+                  sizes="(max-width: 767px) 93vw, (max-width: 991px) 45vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
                   alt=""
                   class="webinar-image"
                 />
@@ -595,7 +720,7 @@
                     images/Swathi-p-1080.jpg 1080w,
                     images/Swathi.jpg        1332w
                   "
-                  sizes="(max-width: 479px) 93vw, (max-width: 767px) 96vw, (max-width: 991px) 46vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
+                  sizes="(max-width: 767px) 93vw, (max-width: 991px) 45vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
                   alt=""
                   class="webinar-image"
                 />
@@ -614,7 +739,7 @@
                     images/Sahana-p-1080.jpg 1080w,
                     images/Sahana.jpg        1332w
                   "
-                  sizes="(max-width: 479px) 93vw, (max-width: 767px) 96vw, (max-width: 991px) 46vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
+                  sizes="(max-width: 767px) 93vw, (max-width: 991px) 45vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
                   alt=""
                   class="webinar-image"
                 />
@@ -635,7 +760,7 @@
                     images/Milan-p-1080.jpg 1080w,
                     images/Milan.jpg        1332w
                   "
-                  sizes="(max-width: 479px) 93vw, (max-width: 767px) 96vw, (max-width: 991px) 46vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
+                  sizes="(max-width: 767px) 93vw, (max-width: 991px) 45vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
                   alt=""
                   class="webinar-image"
                 />
@@ -656,7 +781,7 @@
                     images/Ankit-Jha-p-1080.jpg 1080w,
                     images/Ankit-Jha.jpg        1332w
                   "
-                  sizes="(max-width: 479px) 93vw, (max-width: 767px) 96vw, (max-width: 991px) 46vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
+                  sizes="(max-width: 767px) 93vw, (max-width: 991px) 45vw, (max-width: 1279px) 42vw, (max-width: 1919px) 28vw, 21vw"
                   alt=""
                   class="webinar-image"
                 />
