pavlos title change

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 />
                 <h5 class="facult-name">Dr. Pavlos Protopapas</h5>
                 <p class="faculty-designation techx">
-                  Scientific Program Director,<br />IACS, Harvard University<br />PhD,
+                  Scientific Program Director,<br />IACS and lecturer<br />PhD,
                   University of Pennsylvania
                 </p>
               </a>
